pushing meta description

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="description" content="A marketplace for corporate event planners looking for high end venues to host their corporate events.">
   <!-- Facebook Pixel Code -->
   <script>
     !function(f,b,e,v,n,t,s)
